background in body updated

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header class="flex">
       <!-- site logo -->
-      <img src="/images/logo3.svg" alt="site logo" id="logo" />
+      <a href="index.html"><img src="/images/logo4.svg" alt="site logo" id="logo" /></a>
       <!-- site navigation -->
 
       <nav class="pc-navigation">
@@ -48,7 +48,9 @@
         <h1 class="heading-intro">
           Hi, I am Ankit
           <br />
-          Student at Front-end developer
+          Student at
+          <br />
+          Front-end developer
         </h1>
         <i class="fas fa-chevron-down"></i>
       </div>
@@ -247,10 +249,10 @@
     <footer>&copy;2021 Ankit Soni</footer>
     <!-- button which takes user to top of page -->
     <div class="to-top">
-      <i class="fas fa-angle-double-up"></i>
+      <i class="fas fa-chevron-up"></i>
     </div>
     <!-- mobile navigation -->
-    <div class="navigation-mobile">
+    <div class="navigation-mobile hidden">
       <nav>
         <ul class="mobile-ul">
           <li class="active"><a href="index.html">Home</a></li>
