--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,9 @@
   <body>
     <header class="flex">
       <!-- site logo -->
-      <img src="/images/logo.svg" alt="site logo" id="logo" />
+      <a href="index.html"><img src="/images/logo4.svg" alt="site logo" id="logo" /></a>
       <!-- site navigation -->
-      <nav>
+      <nav class="pc-navigation">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About me</a></li>
@@ -28,7 +28,7 @@
         </ul>
       </nav>
       <!-- social icons -->
-      <div class="social-icons">
+      <div class="social-icons pc-navigation">
         <a href="https://www.facebook.com/ankitsoni86" target="_blank" aria-label="link to author's facebook page">
           <span><i class="fab fa-facebook-f"></i></span>
         </a>
@@ -53,7 +53,7 @@
     <footer>&copy;2021 Ankit Soni</footer>
     <!-- button which takes user to top of page -->
     <div class="to-top">
-      <i class="fas fa-angle-double-up"></i>
+      <i class="fas fa-chevron-up"></i>
     </div>
     <!-- mobile navigation -->
     <div class="navigation-mobile">
