socilal icons moved from header and contact button added in header

--- a/about.html
+++ b/about.html
@@ -27,18 +27,7 @@
           <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
       </nav>
-      <!-- social icons -->
-      <div class="social-icons pc-navigation">
-        <a href="https://www.facebook.com/ankitsoni86" target="_blank" aria-label="link to author's facebook page">
-          <span><i class="fab fa-facebook-f"></i></span>
-        </a>
-        <a href="https://www.instagram.com/ankt8soni" target="_blank" aria-label="link to author's instagram page">
-          <span><i class="fab fa-instagram"></i></span>
-        </a>
-        <a href="mailto:akt_soni@yahoo.co.in" aria-label="link to author's e-mail address">
-          <span><i class="fas fa-envelope"></i></span>
-        </a>
-      </div>
+      <a href="mailto:akt_soni@yahoo.co.in" aria-label="link to author's e-mail address" class="contact-btn pc-navigation">Contact me</a>
       <!-- hamburger bars -->
       <div class="hamburger"><i class="fas fa-bars"></i></div>
     </header>
@@ -50,7 +39,21 @@
     </section>
     <main></main>
     <!--  footer -->
-    <footer>&copy;2021 Ankit Soni</footer>
+    <footer>
+      &copy;2021 Ankit Soni
+      <!-- social icons -->
+      <div class="social-icons">
+        <a href="https://www.facebook.com/ankitsoni86" target="_blank" aria-label="link to author's facebook page">
+          <span><i class="fab fa-facebook-f"></i></span>
+        </a>
+        <a href="https://www.instagram.com/ankt8soni" target="_blank" aria-label="link to author's instagram page">
+          <span><i class="fab fa-instagram"></i></span>
+        </a>
+        <a href="https://github.com/aktson?tab=repositories" target="_blank" aria-label="link to author's e-mail address">
+          <span><i class="fab fa-github-square"></i></span>
+        </a>
+      </div>
+    </footer>
     <!-- button which takes user to top of page -->
     <div class="to-top">
       <i class="fas fa-chevron-up"></i>
@@ -64,18 +67,7 @@
           <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
       </nav>
-      <!-- social icons -->
-      <div class="social-icons mobile-social-icons">
-        <a href="https://www.facebook.com/ankitsoni86" target="_blank" aria-label="link to author's facebook page">
-          <span><i class="fab fa-facebook-f"></i></span>
-        </a>
-        <a href="https://www.instagram.com/ankt8soni" target="_blank" aria-label="link to author's instagram page">
-          <span><i class="fab fa-instagram"></i></span>
-        </a>
-        <a href="mailto:akt_soni@yahoo.co.in" aria-label="link to author's e-mail address">
-          <span><i class="fas fa-envelope"></i></span>
-        </a>
-      </div>
+      <a href="mailto:akt_soni@yahoo.co.in" aria-label="link to author's e-mail address" class="contact-btn">Contact me</a>
     </div>
     <script src="js/script.js"></script>
   </body>
