background style changed
background changed to plain white

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header class="flex">
       <!-- site logo -->
-      <a href="index.html"><img src="/images/logo4.svg" alt="site logo" id="logo" /></a>
+      <a href="index.html"><img src="/images/logo.svg" alt="site logo" id="logo" /></a>
       <!-- site navigation -->
 
       <nav class="pc-navigation">
@@ -28,7 +28,7 @@
           <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
       </nav>
-      <a href="mailto:akt_soni@yahoo.co.in" aria-label="link to author's e-mail address" class="contact-btn pc-navigation">Contact me</a>
+      <a href="mailto:akt_soni@yahoo.co.in" class="contact-btn pc-navigation">Contact</a>
 
       <!-- hamburger bars -->
       <div class="hamburger"><i class="fas fa-bars"></i></div>
@@ -53,12 +53,12 @@
         <h2>Some Things I've Built</h2>
         <div>
           <p>
-            During my first year as front-end developer student, I have been building some sites for different subjects. and has been improved through
-            out my first year.
+            During my first year as front-end developer student, I have been building some sites for different subjects. All sites has been improved
+            through out my first year.
           </p>
           <p>
-            SquareEyes for movies purchase was my first project at start of my studies , then I went on to built Community science museum site, an
-            informational site for newly opened museum in town.
+            SquareEyes for movies purchase was my first project at start of my studies , then I went on to built Community Science museum site, an
+            informational site for newly opened museum.
           </p>
           <p>And third one being, personal blogging website which focuses on fetching data from wordpress rest-api.</p>
         </div>
@@ -89,10 +89,10 @@
             <div>
               <h4>Latest updates</h4>
               <p>
-                I managed to get to function level process 2 where we was tasked to collect user data and add search option when I delivered project.
-                Basically, I am really satisfied with design, functionality and user experience for Project exam "ankson-blog". Some big changes were
-                made during production, which eventually improved functionality. So not much I have worked on this project. Since I am also didn't get
-                teacher feedback for exam.
+                I managed to get to functional level process 2 where we was tasked to collect user data and add search option when I delivered
+                project. Basically, I am really satisfied with design, functionality and user experience for Project exam "ankson-blog". Some big
+                changes were made during production, which eventually improved functionality. So not much I have worked on this project. Since I am
+                also didn't get teacher feedback for exam.
               </p>
               <p>
                 One thing which I would like to work further on , is to get easilly submitted e-mail for subscribe section. Which unfortunately, I
@@ -103,7 +103,7 @@
 
           <!-- Site two wrapper -->
           <section class="site-two-wrapper grid-one-column tab-content" id="community">
-            <h3>Semester exam -Community Science Museum</h3>
+            <h3>Semester exam - Community Science Museum</h3>
             <!-- external links to github and site -->
             <div>
               <a href="https://github.com/Noroff-FEU-Assignments/project-exam-1-aktson" target="_blank">
@@ -146,7 +146,7 @@
 
           <!-- Site three wrapper -->
           <section class="site-three-wrapper grid-one-column tab-content" id="squareeyes">
-            <h3>Cross course assignment SquareEyes</h3>
+            <h3>Cross course assignment - SquareEyes</h3>
             <!-- external links to github and site -->
             <div>
               <a href="https://github.com/aktson/squareeyes" target="_blank">
@@ -198,29 +198,29 @@
           <h2>Tecnology I work with</h2>
           <!-- inline color style for icons since I found it easiest that way -->
           <p>
-            <i class="fab fa-html5" style="color: rgb(253, 133, 77)"></i>
+            <i class="fab fa-html5" style="color: rgb(255, 112, 45)"></i>
             HTML5
           </p>
 
           <p>
-            <i class="fab fa-css3-alt" style="color: rgb(157, 203, 255)"></i>
+            <i class="fab fa-css3-alt" style="color: rgb(80, 162, 255)"></i>
             CSS3
           </p>
           <p>
-            <i class="fab fa-js" style="color: yellow"></i>
+            <i class="fab fa-js" style="color: rgb(194, 197, 0)"></i>
             Javascript
           </p>
           <p>
-            <i class="fab fa-github-square" style="color: rgb(255, 255, 255)"></i>
+            <i class="fab fa-github-square" style="color: rgb(0, 0, 0)"></i>
             Github
           </p>
 
           <p>
-            <i class="fab fa-wordpress" style="color: rgb(0, 182, 243)"></i>
+            <i class="fab fa-wordpress" style="color: rgb(7, 193, 255)"></i>
             Wordpress rest-api
           </p>
           <p>
-            <i class="fas fa-user-check" style="color: rgb(158, 247, 162)"></i>
+            <i class="fas fa-user-check" style="color: rgb(106, 255, 113)"></i>
             Web accessibility
           </p>
           <p>
@@ -228,7 +228,7 @@
             Adobe XD
           </p>
           <p>
-            <i class="fab fa-buromobelexperte" style="color: rgb(248, 172, 217)"></i>
+            <i class="fab fa-buromobelexperte" style="color: rgb(255, 128, 204)"></i>
             Responsive websites
           </p>
         </div>
@@ -265,7 +265,7 @@
           <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
       </nav>
-      <a href="mailto:akt_soni@yahoo.co.in" aria-label="link to author's e-mail address" class="contact-btn">Contact me</a>
+      <a href="mailto:akt_soni@yahoo.co.in" class="contact-btn">Contact</a>
     </div>
     <script src="js/script.js"></script>
   </body>
