--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   <body>
     <header class="flex">
       <!-- site logo -->
-      <a href="index.html"><img src="/images/logo4.svg" alt="site logo" id="logo" /></a>
+      <a href="index.html"><img src="/images/logo.svg" alt="site logo" id="logo" /></a>
       <!-- site navigation -->
       <nav class="pc-navigation">
         <ul>
@@ -27,7 +27,7 @@
           <li class="active"><a href="portfolio.html">Portfolio</a></li>
         </ul>
       </nav>
-      <a href="mailto:akt_soni@yahoo.co.in" aria-label="link to author's e-mail address" class="contact-btn pc-navigation">Contact me</a>
+      <a href="mailto:akt_soni@yahoo.co.in" class="contact-btn pc-navigation">Contact</a>
       <!-- hamburger bars -->
       <div class="hamburger"><i class="fas fa-bars"></i></div>
     </header>
@@ -67,7 +67,7 @@
           <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
       </nav>
-      <a href="mailto:akt_soni@yahoo.co.in" aria-label="link to author's e-mail address" class="contact-btn">Contact me</a>
+      <a href="mailto:akt_soni@yahoo.co.in" class="contact-btn">Contact</a>
     </div>
     <script src="js/script.js"></script>
   </body>
