bg changed in lines

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               </ul>
             </div>
             <div>
-              <h4>why updates were necessary</h4>
+              <h4>Why updates were necessary</h4>
               <p>
                 I thought header looked quite busy with background color and not so much breathing space. I felt, I should try to improve somehow .
                 Another aspect was growing line on hover, got lots os attention because of being quite thick. While last changes were to reduce nav
@@ -168,7 +168,7 @@
               </ul>
             </div>
             <div>
-              <h4>why updates were necessary</h4>
+              <h4>Why updates were necessary</h4>
               <p>
                 As a user, you must be able to contact site owner for possible feedback or queries. Which I didn't thought about when designing site.
                 So contact page was necessary. After going back to redesign , I felt that it was hard to read codes in html and js files, particulary
