reading done and corrected

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
           </p>
           <p>
             SquareEyes for movies purchase was my first project at start of my studies , then I went on to built Community Science museum site, an
-            informational site for newly opened museum.
+            informational site for newly opened museum. And third one being, personal blogging website which focuses on fetching data from wordpress
+            rest-api.
           </p>
-          <p>And third one being, personal blogging website which focuses on fetching data from wordpress rest-api.</p>
         </div>
         <!-- section wrapper for all sites -->
         <section class="all-sites">
@@ -128,7 +128,7 @@
             <div>
               <h4>Why updates were necessary</h4>
               <p>
-                I thought header looked quite busy with background color and not so much breathing space. I felt, I should try to improve somehow .
+                I thought header looked quite busy with background color and not so much breathing space. I felt, I should try to improve somehow.
                 Another aspect was growing line on hover, got lots os attention because of being quite thick. While last changes were to reduce nav
                 items in header sections. I felt again that was too much going on in header section
               </p>
@@ -137,8 +137,8 @@
               <h4>How changes were Implemented</h4>
               <p>
                 First removed background color and kept rather plain white background and then added some padding to give that enough room which
-                needed for elements. Then I went on to add dropdown menu to further reduce menu items in nav section. Mouse over event to keep to
-                minimal while keeping user informed that there are more sub-menus in header.
+                needed for elements. Then I went on to add dropdown menu to further reduce menu items in nav section. Added mouse over event to keep
+                to minimal while keeping user informed that there are more sub-menus in header.
               </p>
               <p>Growing line on hover was thinned out to reduce direct attention rather keeping it simple animation going.</p>
             </div>
@@ -170,21 +170,25 @@
             <div>
               <h4>Why updates were necessary</h4>
               <p>
-                As a user, you must be able to contact site owner for possible feedback or queries. Which I didn't thought about when designing site.
-                So contact page was necessary. After going back to redesign , I felt that it was hard to read codes in html and js files, particulary
-                what or where they belong to. So description or commenting was necessary for readability. Some other issues, I came up with was
-                snapping back which kinda didn't feel smooth user experience.
+                As a user, you must be able to contact site owner for possible feedback or queries. Which I didn't think about when designing site. So
+                contact page was necessary. After going back to redesign, I felt that it was hard to read codes in html and js files, particulary was
+                hard to find out for what or where they belong to. So description or commenting was necessary for readability. Some other issues I
+                came up was, button on hover snapping back which kinda didn't feel smooth user experience.
               </p>
             </div>
 
             <div>
               <h4>How changes were Implemented</h4>
               <p>
-                As per teachers feedback, contact page was missing for site.I adde contact page and I did n't find place for button in navigation,
-                since it was actually part of design. So I added button in footer which takes user to contact form. I further went on to clean up some
-                messy code and added comments on each section, which I helps for readability specially I had lots of content html pages.
+                As per teacher's feedback, contact page was missing for site. I added contact page and I didn't find place for contact button in
+                navigation, since it wasn't actually part of design. So I added button in footer section which takes user to contact form. I further
+                went on to clean up some messy code and added comments on each section, which helps for readability specially when there is lots of
+                content in html pages.
               </p>
-              <p>Some transition properties added, so button did not actually snap back after hovering, which I thinks feels much better.</p>
+              <p>
+                Some transition properties added, so button did notsnap back when user leaves button, rather add smooth transition which I think feels
+                much better as user.
+              </p>
             </div>
           </section>
         </section>
