--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   <body>
     <header class="flex">
       <!-- site logo -->
-      <a href="index.html"><img src="/images/logo.svg" alt="site logo" id="logo" /></a>
+      <a href="index.html"><img src="/images/logo3.svg" alt="site logo" id="logo" /></a>
       <!-- site navigation -->
       <nav class="pc-navigation">
         <ul>
