--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
       integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
       crossorigin="anonymous"
     />
-    <title>Home | Ankit Soni</title>
+    <title>About | Ankit Soni</title>
   </head>
   <body>
     <header class="flex">
@@ -62,8 +62,8 @@
     <div class="navigation-mobile">
       <nav>
         <ul class="mobile-ul">
-          <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="about.html">About me</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html" class="active">About me</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
       </nav>
